@@ -10,6 +10,7 @@ man/fr/man1/gpasm.1
 man/fr/man1/gpdasm.1
 man/fr/man1/gplib.1
 man/fr/man1/gplink.1
+man/fr/man1/gpstrip.1
 man/fr/man1/gputils.1
 man/fr/man1/gpvc.1
 man/fr/man1/gpvo.1
