@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.11640 2005/10/24 02:27:47 minskim Exp $
+$NetBSD: CHANGES,v 1.11641 2005/10/24 08:43:09 adam Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 
@@ -4812,3 +4812,4 @@ Changes to the packages collection and infrastructure in 2005:
 	Added www/zope3 version 3.1.0 [minskim 2005-10-24]
 	Updated net/libtorrent to 0.7.5 [adam 2005-10-24]
 	Updated net/rtorrent to 0.3.5 [adam 2005-10-24]
+	Updated devel/gputils to 0.13.3 [dogcow 2005-10-24]
